# Quant-Data-Engineering

./: .gitignore  README.md  pyproject.toml
data/processed/: market_events.csv  market_events.parquet  valid_market_events.csv
data/raw/: sample_taq.csv
notebooks/: market_data_quality_demo.ipynb
reports/: data_quality_report.md  data_quality_summary.json  research_summary_by_day_symbol.csv
src/mdq/: __init__.py  generate_sample_data.py  pipeline.py  quality_checks.py
tests/: test_quality_checks.py
